# distributed-ai

./: Cargo.toml  README.md
.github/workflows/: test.yml
guessing_game/src/: main.rs
scripts/: parse_csvs.py
thirdchapter/: Cargo.toml
thirdchapter/src/: main.rs
wsn-simulation/: .env  Cargo.toml  configs.json
wsn-simulation/assets/data/: Kitchen_Brightness.csv  Kitchen_Humidity.csv  Kitchen_Temperature.csv  Kitchen_ThermostatTemperature.csv  Kitchen_Virtual_OutdoorTemperature.csv
wsn-simulation/macros/benchmark_macro/src/: lib.rs
wsn-simulation/sensors/: Cargo.toml
wsn-simulation/sensors/src/: data.rs  lib.rs  main.rs  sensor.rs
wsn-simulation/system/src/: config.rs  main.rs  path.rs
wsn-simulation/system/src/env/: config.rs  db.rs  mod.rs
wsn-simulation/system/src/logger/: mod.rs  production.rs
wsn-simulation/websocket/: Cargo.toml
wsn-simulation/websocket/src/: main.rs
wsn-simulation/zeromq/: Cargo.toml
wsn-simulation/zeromq/src/: lib.rs  main.rs  publisher.rs  subscriber.rs
