[package]
name = "sensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
system = { version = "0.1.0", path = "../system" }
rocket = { version = "0.5.0", features = ["json"] }
polars = { version = "0.39.2" }
chrono = { version = "0.4.38" }