[package]
name = "sensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
system = { version = "0.1.0", path = "../system" }

rocket = { version = "0.5.0", features = ["json"] }
polars = { version = "0.39.2" }
chrono = { version = "0.4.38" }
url = "2.2.2"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.4.0", features = ["json"] }
