[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"]}
serde = { version = "1.0.157", features = ["derive"] }
reqwest = "0.12.4"
sensors = { path = "../sensors" }
zeromq = {path = "../zeromq"}
zmq = "0.10.0"
serde_json = "1.0.94"
lazy_static = "1.4.0"